# prc-assessment

./: .env  .gitignore  Dockerfile  README.md  SUBMISSION.md  TASK.md  alembic.ini  docker-compose.yaml  pyproject.toml  task1.sql  task2.sql  test_connection.py
alembic/: alembic.ini  env.py
clickhouse-goose-migrations/: 20240915061431_create_char_counts_table.sql  20240915065522_add_age_duration_columns.sql
connect-configs/: clickhouse-sink.json  postgres-source-flatten.json  postgres-source-update-issue.json  postgres-source.json
dbt-clickhouse-malaa/: .user.yml  dbt_project.yml  profiles.yml  pyproject.toml
dbt-clickhouse-malaa/macros/: generate_schema_name.sql
dbt-clickhouse-malaa/models/: _properteis.yaml  char_counts.sql  hacker_news.sql  hacker_news_log.sql  hacker_news_queue_table.sql  sources.yml
dbt-clickhouse-malaa/models/analytics/: char_counts.sql
dbt-clickhouse-malaa/models/landing/: hacker_news.sql  hacker_news_log.sql
dbt-new-schema-models/: hacker_news.sql  hacker_news_log.sql
new-schema-models/clickhouse/: hackernews.py
new-schema-models/postgres/: models.py
prc/clickhouse/: base.py
prc/postgres/: base.py
prc/redpanda/: __init__.py
scripts/: clear_tables.sh  init_dbs.sh  start_simulation.sh  utils.py
scripts/clickhouse/: clear.py  init.py  print_ddl.py
scripts/postgres/: add_data.py  clear.py  init.py  print_ddl.py  simulate_cdc.py
scripts/redpanda/: consume_cockroachdb_output.py  consume_postgres_data.py  produce_cockroachdb_output.py  simulate_cockroachdb_output.py
sub_services/metabase/: Dockerfile  (+1 more)
(+21 files in other folders)
