[tool.poetry]
name = "dbt-clickhouse-malaa"
version = "0.1.0"
description = ""
authors = ["yousef_vm <yousef@shaguf.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.0"
dbt-clickhouse = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
